--- a/index.html
+++ b/index.html
@@ -32,5 +32,96 @@
     <!-- Style CSS -->
     <link rel="stylesheet" href="./Style/style.css" />
   </head>
-  <body></body>
+  <body>
+    <!-- Header start -->
+    <header>
+      <div class="navbar bg-[#edf7ff] shadow-sm">
+        <div class="navbar-start">
+          <div class="dropdown">
+            <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                class="h-5 w-5"
+                fill="none"
+                viewBox="0 0 24 24"
+                stroke="currentColor"
+              >
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  stroke-width="2"
+                  d="M4 6h16M4 12h8m-8 6h16"
+                />
+              </svg>
+            </div>
+            <ul
+              tabindex="0"
+              class="menu menu-sm dropdown-content bg-base-100 rounded-box z-1 mt-3 w-52 p-2 shadow"
+            >
+              <li>
+                <a href="" class=""
+                  ><i class="fa-solid fa-circle-question"></i> FAQ</a
+                >
+              </li>
+              <li>
+                <a href="" class=""
+                  ><i class="fa-solid fa-book-open"></i> Learn</a
+                >
+              </li>
+              <li>
+                <a href="" class=""
+                  ><i class="fa-solid fa-right-from-bracket"></i> LogOut</a
+                >
+              </li>
+            </ul>
+          </div>
+          <a href="" class="flex items-center space-x-1 text-2xl"
+            ><span class="font-bold">ENGLISH</span>
+            <img src="./assets/logo.png" alt="logo" />
+            <span class="font-semibold bangla-font">জানালা</span>
+          </a>
+        </div>
+        <div class="navbar-end hidden lg:flex">
+          <ul class="menu menu-horizontal px-1 space-x-4">
+            <li>
+              <a href="" class="btn btn-outline btn-primary"
+                ><i class="fa-solid fa-circle-question"></i> FAQ</a
+              >
+            </li>
+            <li>
+              <a href="" class="btn btn-outline btn-primary"
+                ><i class="fa-solid fa-book-open"></i> Learn</a
+              >
+            </li>
+            <li>
+              <a href="" class="btn btn-outline btn-primary"
+                ><i class="fa-solid fa-right-from-bracket"></i> LogOut</a
+              >
+            </li>
+          </ul>
+        </div>
+      </div>
+    </header>
+    <!-- Main section start -->
+    <main>
+      <!-- banner section here -->
+      <section
+        class="flex justify-between items-center gap-10 py-5 w-11/12 mx-auto"
+      >
+        <div class="left-div flex-1">
+          <h1 class="text-4xl font-bold mb-6">
+            <span class="text-sky-400">English</span> is easy!!
+          </h1>
+          <p class="bangla-font text-2xl">
+            আজ থেকেই আপনার ভাষা শেখার যাত্রা শুরু করুন। আপনি যদি নতুন হন অথবা
+            আপনার দক্ষতা বাড়াতে চান, আমাদের Interactive Lessons আপনাকে নিয়ে যাবে
+            অন্য একটি Level এ
+          </p>
+        </div>
+        <div class="right-div flex-1">
+          <img src="./assets/hero-student.png" alt="banner-logo" />
+        </div>
+      </section>
+    </main>
+  </body>
 </html>
