--- a/index.html
+++ b/index.html
@@ -106,17 +106,38 @@
     <main>
       <!-- banner section here -->
       <section
-        class="flex justify-between items-center gap-10 py-5 w-11/12 mx-auto"
+        class="flex flex-col-reverse md:flex-row justify-between items-center gap-10 py-5 w-11/12 mx-auto"
       >
-        <div class="left-div flex-1">
+        <div class="left-div flex-1 text-center md:text-left">
           <h1 class="text-4xl font-bold mb-6">
             <span class="text-sky-400">English</span> is easy!!
           </h1>
-          <p class="bangla-font text-2xl">
+          <p class="bangla-font text-xl">
             আজ থেকেই আপনার ভাষা শেখার যাত্রা শুরু করুন। আপনি যদি নতুন হন অথবা
             আপনার দক্ষতা বাড়াতে চান, আমাদের Interactive Lessons আপনাকে নিয়ে যাবে
             অন্য একটি Level এ
           </p>
+          <div class="mt-5">
+            <form class="">
+              <input
+                class="mb-5 text-center md:text-left border-gray-200"
+                type="text"
+                name=""
+                id=""
+                placeholder="Enter your name"
+              />
+              <br />
+              <input
+                class="mb-5 text-center md:text-left border-gray-200"
+                type="password"
+                name=""
+                id=""
+                placeholder="password"
+              />
+              <br />
+              <button class="btn btn-active btn-primary">Get Started</button>
+            </form>
+          </div>
         </div>
         <div class="right-div flex-1">
           <img src="./assets/hero-student.png" alt="banner-logo" />
