--- a/index.html
+++ b/index.html
@@ -143,6 +143,33 @@
           <img src="./assets/hero-student.png" alt="banner-logo" />
         </div>
       </section>
+
+      <!-- Vucabulary section -->
+      <section class="py-5 w-11/12 mx-auto">
+        <h2 class="text-4xl font-bold mb-6 text-center">
+          <span class="text-sky-400">Let's</span> Learn Vocabularies
+        </h2>
+        <div
+          id="level-container"
+          class="flex justify-center items-center gap-5 flex-wrap"
+        ></div>
+      </section>
+      <!-- card word container -->
+      <section
+        id="word-container"
+        class="bg-gray-100 w-11/12 mx-auto p-10 my-10 grid grid-cols-3 gap-5"
+      >
+        <div class="col-span-full items-center text-center space-y-3 py-10">
+          <p class="text-gray-400 text-sm bangla-font">
+            আপনি এখনো কোন Lesson Select করেন নি।
+          </p>
+          <h2 class="text-3xl bangla-font font-medium">
+            একটি Lesson Select করুন।
+          </h2>
+        </div>
+      </section>
     </main>
+
+    <script src="./scrept/scrept.js"></script>
   </body>
 </html>
