--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
       <!-- card word container -->
       <section
         id="word-container"
-        class="bg-gray-100 w-11/12 mx-auto p-10 my-10 grid grid-cols-3 gap-5"
+        class="bg-gray-100 w-11/12 mx-auto p-10 my-10 grid grid-cols-1 md:grid-cols-3 gap-5"
       >
         <div class="col-span-full items-center text-center space-y-3 py-10">
           <p class="text-gray-400 text-sm bangla-font">
@@ -188,7 +188,68 @@
           </h2>
         </div>
       </section>
-
+      <!-- Question section -->
+      <section class="mt-48 w-11/12 mx-auto">
+        <h2 class="text-4xl font-bold mb-6 text-center">
+          <span class="text-sky-400">Frequently</span> Asked Questions
+        </h2>
+        <div>
+          <div
+            class="collapse collapse-plus bg-base-100 border border-base-300"
+          >
+            <input type="radio" name="my-accordion-3" checked="checked" />
+            <div class="collapse-title font-semibold">
+              1. How can I start learning English on this website?
+            </div>
+            <div class="collapse-content text-sm">
+              You can start by exploring our beginner lessons, interactive exercises, and quizzes. We also offer structured courses to guide you step by step.
+          </div>
+          <div
+            class="collapse collapse-plus bg-base-100 border border-base-300"
+          >
+            <input type="radio" name="my-accordion-3" />
+            <div class="collapse-title font-semibold">
+             2. Is this website free to use?
+            </div>
+            <div class="collapse-content text-sm">
+              Yes, the website is free to use. You can access lessons, exercises, and quizzes without payment. (Some platforms may offer optional premium features, but the core learning content is usually free.)
+            </div>
+          </div>
+          <div
+            class="collapse collapse-plus bg-base-100 border border-base-300"
+          >
+            <input type="radio" name="my-accordion-3" />
+            <div class="collapse-title font-semibold">
+              3.  Do I need to create an account?
+            </div>
+            <div class="collapse-content text-sm">
+              In most cases, you can browse some lessons without an account, but creating one lets you track your progress, save exercises, and access all features.
+            </div>
+          </div>
+          <div
+            class="collapse collapse-plus bg-base-100 border border-base-300"
+          >
+            <input type="radio" name="my-accordion-3" />
+            <div class="collapse-title font-semibold">
+              4. How can I build my English vocabulary?
+            </div>
+            <div class="collapse-content text-sm">
+              You can improve your vocabulary by reading regularly, practicing with flashcards, using new words in sentences, and trying interactive exercises or quizzes. Watching movies, listening to podcasts, and speaking with others also helps strengthen vocabulary.
+            </div>
+          </div>
+          <div
+            class="collapse collapse-plus bg-base-100 border border-base-300"
+          >
+            <input type="radio" name="my-accordion-3" />
+            <div class="collapse-title font-semibold">
+              5. Do you offer certificates for completed courses?
+            </div>
+            <div class="collapse-content text-sm">
+              Yes, many platforms provide certificates once you successfully complete a course. These certificates can be downloaded, shared, and sometimes even added to your LinkedIn profile to showcase your achievement.
+            </div>
+          </div>
+        </div>
+      </section>
       <!-- Open the modal using ID.showModal() method -->
       <!-- <button class="btn" onclick="my_modal_5.showModal()">open modal</button> -->
 
@@ -204,7 +265,33 @@
         </div>
       </dialog>
     </main>
-
+   
+    <section class=" border-t border-pink-300 py-20 mt-24">
+      <footer class=" w-11/12 mx-auto">
+      <div>
+        <a href="" class="flex items-center space-x-1 text-2xl"
+            ><span class="font-bold">ENGLISH</span>
+            <img src="./assets/logo.png" alt="logo" />
+            <span class="font-semibold bangla-font">জানালা</span>
+          </a>
+      </div>
+      <div class="mt-3">
+        <h2 class="bangla-font font-semibold text-xl">ইংরেজি শিখুন সহজে</h2>
+        
+      </div>
+        
+      <div class="md:flex md:justify-between items-center mt-2">
+        <h3 class="mb-2">Providing ED-Tech Applications since 2025</h3>
+        <div>
+          <p class="mb-1">Follow Us</p>
+          <a href=""><i class="fa-brands fa-facebook"></i></a>
+          <a href=""><i class="fa-brands fa-youtube"></i></a>
+          <a href=""><i class="fa-brands fa-github"></i></a>
+          <a href=""><i class="fa-brands fa-instagram"></i></a>
+        </div>
+      </div>
+    </footer>
+    </section>
     <script src="./scrept/scrept.js"></script>
   </body>
 </html>
